fix z-index issue

--- a/src/components/CreativeSaection/creativeSection.css
+++ b/src/components/CreativeSaection/creativeSection.css
@@ -6,12 +6,11 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  z-index: 20;
   background: #000;
 }
 
 .creatice_section .night {
-  z-index: 20;
+  /* z-index: 20; */
 }
 
 .night h1 {
@@ -20,7 +19,7 @@
   font-size: 7rem;
   text-align: center;
   position: relative;
-  z-index: 10;
+  /* z-index: 10; */
   font-family: "Space Grotesk", serif;
   line-height: normal;
 }
@@ -34,7 +33,7 @@
   animation: rotate 30s linear infinite;
   position: absolute;
   margin: 0;
-  z-index: 10;
+  /* z-index: 10; */
 
 }
 
@@ -48,7 +47,7 @@
   /* animation: rotate 30s linear infinite; */
   position: absolute;
   margin: 0;
-  z-index: 10;
+  /* z-index: 10; */
 
 }
 
@@ -62,7 +61,7 @@
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
-  z-index: 10;
+  /* z-index: 10; */
 }
 
 .circle2 {
@@ -75,7 +74,7 @@
   /* animation: rotate 30s linear infinite; */
   position: absolute;
   margin: 0;
-  z-index: 10;
+  /* z-index: 10; */
 
 }
 
