--- a/src/components/GradientCirlcle/style.css
+++ b/src/components/GradientCirlcle/style.css
@@ -4,7 +4,7 @@
   height: 20rem;
   background-color: var(--blue);
   filter: blur(200px);
-  z-index: 5;
+  /* z-index: 5; */
   border-radius: 50%;
   /* inset: -8% auto auto -13%; */
 }
