--- a/src/components/online_marquee/style.css
+++ b/src/components/online_marquee/style.css
@@ -54,7 +54,7 @@
 }
 
 .top-button_blur {
-  z-index: 2;
+  /* z-index: 2; */
   background-image: linear-gradient(92deg, #041718, #0000);
   width: 1rem;
   position: absolute;
@@ -62,7 +62,7 @@
 }
 
 .top-button_blur.is-right {
-  z-index: 2;
+  /* z-index: 2; */
   background-image: linear-gradient(92deg, #0000, #041718);
   inset: 0% 0% 0% auto;
 }
