--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,7 +2,7 @@
   height: 100vh;
   width: 100%;
   position: relative;
-  z-index: 20;
+  z-index: 10;
   background: black;
 }
 
