--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  z-index: 20;
+  : 20;
   background-color: black;
 }
 
