--- a/src/pages/Skills/Skills.css
+++ b/src/pages/Skills/Skills.css
@@ -4,7 +4,7 @@
   width: 100%;
   position: relative;
   height: 100vh;
-  z-index: 20;
+  /* z-index: 20; */
   background-color: black;
 }
 
